CHANGE: Core | Upload limit can now be set less than 5KB/sec. However, doing so limits download speed too [Parg]
CHANGE: Core | User config/pref/plugins dir culled from Windows' Registry (needs aereg.dll) [Parg]
CHANGE: Core | OSX user- pref/plugin dir moved from ~/Library/Azureus/ to ~/Library/Application Support/Azureus/ to meet osx standards [Nolar]
CHANGE: UI   | All progress/piece bars re-done (again) [TuxPaper]
CHANGE: UI   | Azureus should work with SWT 2.12 until we break backwards compat. again [TuxPaper]
CHANGE: UI   | Shrink "My Torrents" Context menu [TuxPaper]
CHANGE: UI   | Systray4j removed: system tray support now from SWT built-in code (Requires SWT-M8+) [Gudy]
CHANGE: UI   | Torrent name shown with IPs in the blocked-IPFilter list [Nolar]
CHANGE: UI   | The Donation Window is now Closeable using the 'Esc' Key [Gudy]
CHANGE: UI   | In the Donation Window the OK button should be on top of other Controls [Gudy]
CHANGE: UI   | Added a "what's new" item in help menu, pointing to changelog for current version [Gudy / Gouss]

BUGFIX: Core | Files incorrectly shared if contents not a torrent when opening [Parg]
BUGFIX: Core | First Priority rules based on time now work across sessions [TuxPaper]
BUGFIX: Core | Fix for saving of .torrent file in wrong dir: Bug #916137 [Nolar]
BUGFIX: Core | Fix for some discarded data due to occasional duplicate request [Nolar]
BUGFIX: Core | Fix for system clock changes stalling downloads: Bug #918193 [Nolar]
BUGFIX: Core | Fix for clock being faster when using Azureus [Nolar]
BUGFIX: Core | Fix for underlying socket handles not closing under linux ("Too many open files") [Nolar]
BUGFIX: Core | Individual file priorities remembered after Stop-Start [Nolar]
BUGFIX: Core | Multiple shares of same resources causing problems (e.g. share contents+share contents recursive of same dir) [Parg]
BUGFIX: Core | Simpler and more reliable file allocation...won't b0rk existing data [Nolar]